Removed Qubba and replaced it with EASTERN_DESERT instead. Needs to be localised in greek

--- a/localisation/COUNTIES.csv
+++ b/localisation/COUNTIES.csv
@@ -281,7 +281,7 @@ PROV144;Klysma;;;;;;;;;;;;;x;
 c_clysma_adj;Klysman;;;;;;;;;;;;;x;
 PROV145;Oxyrrhynchos;;;;;;;;;;;;;x;
 c_oxyrhynchus_adj;Oxyrrhynchian;;;;;;;;;;;;;x;
-PROV146;Qubba;;;;;;;;;;;;;x;
+PROV146;EASTERN_DESERT;;;;;;;;;;;;;x;
 c_qubba_adj;Qubban;;;;;;;;;;;;;x;
 PROV147;Lykopolis;;;;;;;;;;;;;x;
 c_lykopolis_adj;Lykopolitan;;;;;;;;;;;;;x;
