Added Soloi as a province to Cyprus

--- a/localisation/BARONIES.csv
+++ b/localisation/BARONIES.csv
@@ -3363,3 +3363,11 @@ b_oiarso_oiasso;Oiarso;;;;;;;;;;;;;x;
 b_victoriacum_victoriacum;Varakos;;;;;;;;;;;;;x;
 b_kalakorikos_victoriacum;Kalakorikos;;;;;;;;;;;;;x;
 b_maleth_maleth;Maleth;;;;;;;;;;;;;x;
+b_thronoi_salamis;Thronoi;;;;;;;;;;;;;x;
+b_aphrodision_salamis;Aphrodision;;;;;;;;;;;;;x;
+b_anogyra_paphos;Anogyra;;;;;;;;;;;;;x;
+b_tremithous_kition;Tremithous;;;;;;;;;;;;;x;
+b_soloi_soloi;Soloi;;;;;;;;;;;;;x;
+b_lapithos_soloi;Lapithos;;;;;;;;;;;;;x;
+b_tamassos_soloi;Tamassos;;;;;;;;;;;;;x;
+b_ledrai_soloi;Ledrai;;;;;;;;;;;;;x;
