--- a/localisation/COUNTIES.csv
+++ b/localisation/COUNTIES.csv
@@ -2089,6 +2089,8 @@ PROV1223;Nura;;;;;;;;;;;;;;
 c_nura_adj;Nuran;;;;;;;;;;;;;;
 PROV1224;Maleth;;;;;;;;;;;;;;
 c_maleth_adj;Maltese;;;;;;;;;;;;;;
+PROV1225;Soloi;;;;;;;;;;;;;;
+c_soloi;Soloian;;;;;;;;;;;;;;
 PROV1350;Cornovia;;;;;;;;;;;;;x;
 PROV1351;Dumnonia;;;;;;;;;;;;;x;
 PROV1352;Durnovaria;;;;;;;;;;;;;x;
