--- a/localisation/COUNTIES.csv
+++ b/localisation/COUNTIES.csv
@@ -2081,16 +2081,20 @@ PROV1219;Virovias;;;;;;;;;;;;;x;
 c_virovesca_adj;Virovian;;;;;;;;;;;;;x;
 PROV1220;Untikesken;;;;;;;;;;;;;x;
 c_unitikesken_adj;Untikeskenian;;;;;;;;;;;;;x;
-PROV1221;Pityoussai;;;;;;;;;;;;;;
-c_ebusos_adj;Pityoussan;;;;;;;;;;;;;;
-PROV1222;Kromioussa;;;;;;;;;;;;;;
-c_cromiussa_adj;Kromioussan;;;;;;;;;;;;;;
-PROV1223;Nura;;;;;;;;;;;;;;
-c_nura_adj;Nuran;;;;;;;;;;;;;;
-PROV1224;Maleth;;;;;;;;;;;;;;
-c_maleth_adj;Maltese;;;;;;;;;;;;;;
-PROV1225;Soloi;;;;;;;;;;;;;;
-c_soloi;Soloian;;;;;;;;;;;;;;
+PROV1221;Pityoussai;;;;;;;;;;;;;x;
+c_ebusos_adj;Pityoussan;;;;;;;;;;;;;x;
+PROV1222;Kromioussa;;;;;;;;;;;;;x;
+c_cromiussa_adj;Kromioussan;;;;;;;;;;;;;x;
+PROV1223;Nura;;;;;;;;;;;;;x;
+c_nura_adj;Nuran;;;;;;;;;;;;;x;
+PROV1224;Maleth;;;;;;;;;;;;;x;
+c_maleth_adj;Maltese;;;;;;;;;;;;;x;
+PROV1225;Soloi;;;;;;;;;;;;;x;
+c_soloi_adj;Soloian;;;;;;;;;;;;;x;
+PROV1226;Gortyn;;;;;;;;;;;;;x;
+c_gortyn_adj;Gortynian;;;;;;;;;;;;;x;
+PROV1227;Hierapytna;;;;;;;;;;;;;x;
+c_hierapytna_adj;Hierapytnan;;;;;;;;;;;;;x;
 PROV1350;Cornovia;;;;;;;;;;;;;x;
 PROV1351;Dumnonia;;;;;;;;;;;;;x;
 PROV1352;Durnovaria;;;;;;;;;;;;;x;
