Added some history for Pergamon

--- a/localisation/KINGDOMS.csv
+++ b/localisation/KINGDOMS.csv
@@ -265,6 +265,8 @@ k_turdetania;Turdetania;;;;;;;;;;;;;x;
 k_turdetania_adj;Turdetanian;;;;;;;;;;;;;x;
 k_syria;Syria;;;;;;;;;;;;;x;
 k_syria_adj;Syrian;;;;;;;;;;;;;x;
+k_pergamum;Pergamon;;;;;;;;;;;;;x;
+k_pergamum_adj;Pergamene;;;;;;;;;;;;;x;
 STRATEGOS;Strategos;;;;;;;;;;;;;x;
 SATRAP;Satrapes;;;;;;;;;;;;;x;
 BASILEUS;Basileus;;;;;;;;;;;;;;x
