--- a/localisation/DUCHIES.csv
+++ b/localisation/DUCHIES.csv
@@ -677,3 +677,5 @@ d_callaeci;Kallaikoi;;;;;;;;;;;;x;;
 d_callaeci_adj;Kallaikian;;;;;;;;;;;;x;;
 d_vascones;Uaskones;;;;;;;;;;;;x;;
 d_vascones_adj;Uaskonian;;;;;;;;;;;;x;;
+d_achaea;Achaia;;;;;;;;;;;;x;;
+d_achaea_adj;Achaian;;;;;;;;;;;;x;;
