Added Parthian history

--- a/localisation/KINGDOMS.csv
+++ b/localisation/KINGDOMS.csv
@@ -267,6 +267,8 @@ k_syria;Syria;;;;;;;;;;;;;x;
 k_syria_adj;Syrian;;;;;;;;;;;;;x;
 k_pergamum;Pergamon;;;;;;;;;;;;;x;
 k_pergamum_adj;Pergamene;;;;;;;;;;;;;x;
+k_parthia;Parthia;;;;;;;;;;;;;x;
+k_parthia_adj;Parthian;;;;;;;;;;;;;x;
 STRATEGOS;Strategos;;;;;;;;;;;;;x;
 SATRAP;Satrapes;;;;;;;;;;;;;x;
 BASILEUS;Basileus;;;;;;;;;;;;;;x
